[#563] 약관 동의 수정
### Description

- 버튼 사라지는 이슈 해결

Resolve #563

--- a/Mohaeng/Mohaeng/Resources/Storyboards/Auth/SignUpSecond.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Auth/SignUpSecond.storyboard
@@ -65,40 +65,38 @@
                                     <action selector="touchCheckButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="uWj-dR-Xob"/>
                                 </connections>
                             </button>
-
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="vws-uc-RVl">
-                                <rect key="frame" x="24" y="205.33333333333334" width="122" height="17"/>
-
+                                <rect key="frame" x="24" y="162" width="131" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="Mvc-HW-dLc"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Button">
+                                <state key="normal">
                                     <attributedString key="attributedTitle">
                                         <fragment content="서비스 이용약관">
                                             <attributes>
-                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="NSColor" name="Black"/>
                                                 <font key="NSFont" size="15" name="AppleSDGothicNeo-Regular"/>
                                                 <integer key="NSUnderline" value="1"/>
                                             </attributes>
                                         </fragment>
                                         <fragment content="(">
                                             <attributes>
-                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="NSColor" name="Black"/>
                                                 <font key="NSFont" size="15" name="AppleSDGothicNeo-Regular"/>
                                             </attributes>
                                         </fragment>
                                         <fragment content="필수">
                                             <attributes>
-                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="NSColor" name="Black"/>
                                                 <font key="NSFont" size="15" name="AppleSDGothicNeo-Regular"/>
                                                 <integer key="NSUnderline" value="1"/>
                                             </attributes>
                                         </fragment>
                                         <fragment content=")">
                                             <attributes>
-                                                <color key="NSColor" name="textColor" catalog="System" colorSpace="catalog"/>
+                                                <color key="NSColor" name="Black"/>
                                                 <font key="NSFont" size="15" name="AppleSDGothicNeo-Regular"/>
                                             </attributes>
                                         </fragment>
@@ -122,52 +120,20 @@
                                     <action selector="touchCheckButton:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="eQg-un-ME8"/>
                                 </connections>
                             </button>
-
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Guc-Ia-nEj">
-
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Guc-Ia-nEj">
+                                <rect key="frame" x="24" y="206" width="182" height="17"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="17" id="Ol5-Xj-5J8"/>
                                 </constraints>
                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="Button">
+                                <state key="normal">
                                     <attributedString key="attributedTitle">
-                                        <fragment content="개인정보 수집 및 이용 동의">
+                                        <fragment content="개인정보 수집 및 이용 동의(필수)">
                                             <attributes>
-
-                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="NSColor" name="Black"/>
                                                 <font key="NSFont" size="14" name="AppleSDGothicNeo-Regular"/>
                                                 <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-
-                                                <integer key="NSUnderline" value="1"/>
-                                            </attributes>
-                                        </fragment>
-                                        <fragment content="(">
-                                            <attributes>
-
-                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <font key="NSFont" size="14" name="AppleSDGothicNeo-Regular"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-
-                                            </attributes>
-                                        </fragment>
-                                        <fragment content="필수">
-                                            <attributes>
-
-                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <font key="NSFont" size="14" name="AppleSDGothicNeo-Regular"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-
-                                                <integer key="NSUnderline" value="1"/>
-                                            </attributes>
-                                        </fragment>
-                                        <fragment content=")">
-                                            <attributes>
-
-                                                <color key="NSColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                <font key="NSFont" size="14" name="AppleSDGothicNeo-Regular"/>
-                                                <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
-
                                             </attributes>
                                         </fragment>
                                     </attributedString>
@@ -237,6 +203,9 @@
     <resources>
         <image name="checkButton" width="24" height="24"/>
         <image name="uncheckButton" width="24" height="24"/>
+        <namedColor name="Black">
+            <color red="0.125" green="0.125" blue="0.125" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="LoginYellow">
             <color red="1" green="0.94900000095367432" blue="0.81599998474121094" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
