--- a/Mohaeng/Mohaeng/Resources/Storyboards/Challenge/Course.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Challenge/Course.storyboard
@@ -31,7 +31,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="shH-L3-rZO">
-                                        <rect key="frame" x="85.5" y="311.5" width="243" height="270"/>
+                                        <rect key="frame" x="85.5" y="311" width="243" height="271.5"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="grpXEmptyChallenge" translatesAutoresizingMaskIntoConstraints="NO" id="sHA-n6-RBr">
                                                 <rect key="frame" x="31.5" y="0.0" width="180" height="180"/>
@@ -41,13 +41,13 @@
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="코스를 선택해서 챌린지를 시작해보자~" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GhA-8C-JhH">
-                                                <rect key="frame" x="30" y="196" width="183.5" height="14"/>
+                                                <rect key="frame" x="26" y="196" width="191.5" height="15.5"/>
                                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
                                                 <color key="textColor" name="Grey2Text"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zjJ-Qw-FE3">
-                                                <rect key="frame" x="0.0" y="226" width="243" height="44"/>
+                                                <rect key="frame" x="0.0" y="227.5" width="243" height="44"/>
                                                 <color key="backgroundColor" name="YellowButton1"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="44" id="STH-vF-NTc"/>
@@ -101,7 +101,7 @@
         <!--챌린지-->
         <scene sceneID="IVp-gs-VCh">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" hidesBarsOnSwipe="YES" id="TuI-sr-lBb" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="TuI-sr-lBb" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="챌린지" image="tabIcnChallenge0" id="cUU-n5-gkM"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="gGg-fW-Rh7">
