--- a/Mohaeng/Mohaeng/Resources/Storyboards/Feed/FeedDetail.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Feed/FeedDetail.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iFT-cS-LYx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19455" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="iFT-cS-LYx">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19454"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -18,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="y9G-Nl-Qb1">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="852"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="uS1-6j-GjF">
                                     <size key="itemSize" width="128" height="128"/>
@@ -43,7 +44,7 @@
                         <constraints>
                             <constraint firstItem="y9G-Nl-Qb1" firstAttribute="leading" secondItem="acs-m2-3qM" secondAttribute="leading" id="JdA-je-stl"/>
                             <constraint firstItem="acs-m2-3qM" firstAttribute="trailing" secondItem="y9G-Nl-Qb1" secondAttribute="trailing" id="Qp5-jb-hC7"/>
-                            <constraint firstItem="acs-m2-3qM" firstAttribute="bottom" secondItem="y9G-Nl-Qb1" secondAttribute="bottom" id="YO0-ak-GFX"/>
+                            <constraint firstAttribute="bottom" secondItem="y9G-Nl-Qb1" secondAttribute="bottom" id="YO0-ak-GFX"/>
                             <constraint firstItem="y9G-Nl-Qb1" firstAttribute="top" secondItem="acs-m2-3qM" secondAttribute="top" id="aFH-10-rFj"/>
                         </constraints>
                     </view>
