--- a/Mohaeng/Mohaeng/Resources/Storyboards/Auth/EmailLogin.storyboard
+++ b/Mohaeng/Mohaeng/Resources/Storyboards/Auth/EmailLogin.storyboard
@@ -27,30 +27,30 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일로 로그인" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odr-lE-3x5">
-                                <rect key="frame" x="24" y="82" width="147" height="28"/>
+                                <rect key="frame" x="24" y="82" width="139.5" height="26"/>
                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Bold" family="Spoqa Han Sans Neo" pointSize="22"/>
                                 <color key="textColor" name="Black"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JWK-RE-JXu">
-                                <rect key="frame" x="28" y="182" width="33.5" height="15.5"/>
+                                <rect key="frame" x="28" y="180" width="31.5" height="14"/>
                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
                                 <color key="textColor" name="Grey2"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="예) mohaeng@gmail.com" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="whW-Mh-qnf">
-                                <rect key="frame" x="28" y="205.5" width="358" height="19.5"/>
+                                <rect key="frame" x="28" y="202" width="358" height="18"/>
                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8f-hY-e8b">
-                                <rect key="frame" x="28" y="269" width="44.5" height="15.5"/>
+                                <rect key="frame" x="28" y="264" width="42" height="14"/>
                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="12"/>
                                 <color key="textColor" name="Grey2"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2fQ-wx-2n9">
-                                <rect key="frame" x="24" y="403.5" width="366" height="40"/>
+                                <rect key="frame" x="24" y="396" width="366" height="40"/>
                                 <color key="backgroundColor" name="LoginYellow"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Lw8-6O-y7l"/>
@@ -64,12 +64,12 @@
                                 </connections>
                             </button>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="비밀번호 입력" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="aQ1-BW-exP">
-                                <rect key="frame" x="28" y="292.5" width="358" height="17"/>
+                                <rect key="frame" x="28" y="286" width="358" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rYV-FS-ex0">
-                                <rect key="frame" x="157.5" y="459.5" width="99" height="25"/>
+                                <rect key="frame" x="159.5" y="452" width="95" height="24"/>
                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="10"/>
                                 <state key="normal" title="비밀번호를 잊으셨나요?">
                                     <color key="titleColor" name="Black"/>
@@ -79,28 +79,27 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="azN-Xq-jJY">
-                                <rect key="frame" x="159.5" y="476.5" width="95" height="1"/>
+                                <rect key="frame" x="159.5" y="469.5" width="95" height="0.5"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="95" id="GxN-w4-dO1"/>
-                                    <constraint firstAttribute="height" constant="1" id="Uon-0I-fDu"/>
+                                    <constraint firstAttribute="height" constant="0.5" id="ZMR-LQ-yaw"/>
                                 </constraints>
                             </view>
                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일 계정 또는 비밀번호를 다시 확인해주세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0e6-Gl-TIl">
-                                <rect key="frame" x="190.5" y="330.5" width="195.5" height="13"/>
+                                <rect key="frame" x="199" y="324" width="187" height="12"/>
                                 <fontDescription key="fontDescription" name="SpoqaHanSansNeo-Regular" family="Spoqa Han Sans Neo" pointSize="10"/>
                                 <color key="textColor" name="Red"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0MS-Id-6ar">
-                                <rect key="frame" x="24" y="317.5" width="366" height="1"/>
+                                <rect key="frame" x="24" y="311" width="366" height="1"/>
                                 <color key="backgroundColor" name="Grey5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="YA9-5D-QYw"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8k1-OZ-i15">
-                                <rect key="frame" x="24" y="233" width="366" height="1"/>
+                                <rect key="frame" x="24" y="228" width="366" height="1"/>
                                 <color key="backgroundColor" name="Grey5"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="Qv9-YS-Piq"/>
@@ -119,12 +118,13 @@
                             <constraint firstItem="0e6-Gl-TIl" firstAttribute="trailing" secondItem="aQ1-BW-exP" secondAttribute="trailing" id="Jpv-RV-La1"/>
                             <constraint firstItem="8k1-OZ-i15" firstAttribute="top" secondItem="whW-Mh-qnf" secondAttribute="bottom" constant="8" id="KjJ-UV-BF7"/>
                             <constraint firstItem="0MS-Id-6ar" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" constant="4" id="LIU-ei-fXB"/>
-                            <constraint firstItem="azN-Xq-jJY" firstAttribute="top" secondItem="2fQ-wx-2n9" secondAttribute="bottom" constant="33" id="LqJ-yH-IPb"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="whW-Mh-qnf" secondAttribute="trailing" constant="28" id="OSb-gh-8EY"/>
+                            <constraint firstItem="azN-Xq-jJY" firstAttribute="width" secondItem="rYV-FS-ex0" secondAttribute="width" id="Q8C-Zc-GhI"/>
                             <constraint firstItem="aQ1-BW-exP" firstAttribute="top" secondItem="c8f-hY-e8b" secondAttribute="bottom" constant="8" id="Rd3-pL-HFe"/>
                             <constraint firstItem="8k1-OZ-i15" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="SgU-7k-mkn"/>
                             <constraint firstItem="0MS-Id-6ar" firstAttribute="top" secondItem="aQ1-BW-exP" secondAttribute="bottom" constant="8" id="UZe-A0-LDU"/>
                             <constraint firstItem="odr-lE-3x5" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="WwO-Xv-ms5"/>
+                            <constraint firstItem="azN-Xq-jJY" firstAttribute="top" secondItem="2fQ-wx-2n9" secondAttribute="bottom" constant="33.5" id="cUd-x8-Rbd"/>
                             <constraint firstItem="0MS-Id-6ar" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="eMb-dP-Kgh"/>
                             <constraint firstItem="0e6-Gl-TIl" firstAttribute="top" secondItem="0MS-Id-6ar" secondAttribute="bottom" constant="12" id="eTs-Pj-S4m"/>
                             <constraint firstItem="8k1-OZ-i15" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leadingMargin" constant="4" id="f3x-Fa-lBj"/>
